# QuickShell

./: CMakeLists.txt  CMakeLists_Lower_Than_Qt6.5.txt  README.md  assets.qrc  main.cpp
GUI/: aboutapp.cpp  aboutapp.h  aboutapp.ui  collectioneditor.h  findterminal.cpp  findterminal.h  findterminal.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  preference.cpp  preference.h  preference.ui
Libs/: Version.h  scriptscollection.cpp  scriptscollection.h  settings.cpp  settings.h  termslist.cpp  termslist.h
assets/: README_zh_CN.md  assets.qrc
assets/conf/: config.conf  terminal.inf
assets/scripts/: count_down.md  count_down.sh  hello_world.md  hello_world.sh  test_args.md  test_args.sh
i18n/: QuickShell_en_US.ts  QuickShell_zh_CN.ts  QuickShell_zh_HK.ts  QuickShell_zh_TW.ts
